[gd_scene load_steps=25 format=2]

[ext_resource path="res://game/map/sprites/asset_gandalf.png" type="Texture" id=1]
[ext_resource path="res://game/map/sprites/asset_speechbubble.png" type="Texture" id=2]
[ext_resource path="res://game/map/sprites/asset_interact_indicator.png" type="Texture" id=3]
[ext_resource path="res://game/map/sprites/asset_direction_indicator.png" type="Texture" id=4]
[ext_resource path="res://game/sign/sign.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.366667, 0.366667 ) ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.63, 0.63 ), Vector2( 0.45, 0.45 ), Vector2( 0.63, 0.63 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5.68434e-14, 13 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 11.922, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=13]
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 13.022, -0.25, 0, 0.25, -0.548232, 9.93174, -0.25, 0.444674, 0.2, 0.130196, 13.022, -0.1, -0.482716, 0.1, -0.0634117, 12.278, -0.05, 0.0123234, 0.1, 0.0516329, 13.022, -0.1, -0.115825, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.6, 0.8 )
}

[sub_resource type="CapsuleShape2D" id=14]
radius = 48.0
height = 62.0

[sub_resource type="CircleShape2D" id=15]
radius = 32.1403

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=19]
radius = 12.0
height = 10.0

[node name="sign" type="Node2D"]
script = ExtResource( 5 )
texts = PoolStringArray( "dies ist ein teil", "von einem längeren", "stück dialog aaaaaaaaaaa aaaaa" )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -4 )
scale = Vector2( 0.578125, 0.578125 )
z_index = 8
frames = SubResource( 9 )
frame = 6
playing = true

[node name="direction" type="Node2D" parent="."]

[node name="AssetDirectionIndicator" type="Sprite" parent="direction"]
position = Vector2( 44, -2.27374e-13 )
rotation = -1.5708
scale = Vector2( 0.366667, 0.366667 )
z_index = 10
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="direction/AssetDirectionIndicator"]
autoplay = "default"
anims/RESET = SubResource( 10 )
anims/default = SubResource( 11 )

[node name="interact" type="Node2D" parent="."]
position = Vector2( 0, -7 )

[node name="AssetInteractIndicator" type="Sprite" parent="interact"]
position = Vector2( 0, 11.922 )
scale = Vector2( 0.423969, 0.423969 )
z_index = 10
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="interact/AssetInteractIndicator"]
autoplay = "default"
anims/RESET = SubResource( 12 )
anims/default = SubResource( 13 )

[node name="directionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="directionArea"]
position = Vector2( 0, 49 )
shape = SubResource( 14 )

[node name="interactArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactArea"]
position = Vector2( 0, 14 )
shape = SubResource( 15 )

[node name="speechbubble" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="speechbubble"]
position = Vector2( 4, -26 )
z_index = 10
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="speechbubble/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -22.0
margin_right = -27.0
margin_bottom = -43.0

[node name="Label" type="Label" parent="speechbubble/Sprite/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -5.5
margin_right = 148.0
margin_bottom = 48.5
rect_scale = Vector2( 0.2204, 0.2204 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "placeholderplaceholderplaceholderplaceholderplaceholder"
align = 1
autowrap = true
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="speechbubble"]
anims/RESET = SubResource( 16 )
anims/hide = SubResource( 17 )
anims/reveal = SubResource( 18 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -1, 1 )
shape = SubResource( 19 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1, -3 )
[connection signal="body_entered" from="directionArea" to="." method="_on_directionArea_body_entered"]
[connection signal="body_exited" from="directionArea" to="." method="_on_directionArea_body_exited"]
[connection signal="body_entered" from="interactArea" to="." method="_on_interactArea_body_entered"]
[connection signal="body_exited" from="interactArea" to="." method="_on_interactArea_body_exited"]
